# ai-music-sentiment

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: collection_summary.json  video_ids.txt
notebooks/: collect_reddit.ipynb  collect_youtube.ipynb
src/: collect_reddit_json.py  collect_youtube.py  collection_summary.py  main.py  search_youtube_ids.py
src/analysis/: README.md  lda.py  sentiment.py  temp.py  top_words.py  word2vec.py  wordcloud.py  wordcloud_gen.py
src/collection/: reddit_json.py  youtube.py  youtube_search_ids.py
src/legacy/: README.md  visualize.py
src/legacy/processing/: reddit_process.py  youtube_process.py
src/processing/: process.py  reddit.py  youtube.py
src/utils/: collection_summary.py
